# python_project_best_practice

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py  setup.sh  setup_local.sh  setup_sphinx.sh  update.py  update.sh
configs/: python.vimrc
